# ArkCalculator

./: .gitignore  .gitmodules  README.md  components.d.ts  package.json  vite.config.ts
.github/workflows/: build-on-release.yml
src/: App.vue  SuspensePage.vue  main.ts  store.ts  style.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/ark_calculator/: .gitignore  Cargo.toml  build.rs
src-tauri/ark_calculator/src/: lib.rs  material.rs  operator.rs  resource_loader.rs  skill.rs  upgrade_cost.rs
src-tauri/icons/: icon.icns
src-tauri/src/: calculator.rs  calculator_plugins.rs  config.rs  main.rs  plugins.rs  profile.rs
src/assets/: AddIcon.vue  AddTask.vue  DeleteIcon.vue  DoneIcon.vue  SettingsIcon.vue
src/components/: MainTable.vue  PageHeader.vue
src/helpers/: ConfigManager.ts  OperatorHelper.ts  ProfileManager.ts  ResourceLoader.ts
src/i18n/: strings.ts
