[package]
name = "ArkCalculator"
version = "0.0.4"
description = "ArkCalculator is an application built with tauri+vue.js that aims to easily calculate the amount of resources needed to upgrade your operators in Arknights. "
authors = ["kht"]
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
ark_calculator = { path = "./ark_calculator" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ureq = { version="2.6.2", features = ["json"] }
tauri = { version = "1.2", features = ["fs-all", "path-all", "shell-open", "window-set-title"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
