[package]
name = "ark_calculator"
authors = ["kht"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.152"
serde_json = "1.0.91"
futures = "0.3.25"
anyhow = "1.0.68"

[build-dependencies]
serde = "1.0.152"
serde_json = "1.0.91"